2009-12-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad_oap.h: Fixed comment.

	* src/CMakeLists.txt: Reformatted.

2009-12-02  Michael Wiegand <michael.wiegand@intevation.de>

	* src/html/src/omp.xsl: Make 'Full and fast' accessible again as a scan
	config template.

2009-12-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION, CMakeLists.txt, src/html/src/about.htm4: Version set
	to 0.8.2.SVN.

2009-12-01  Michael Wiegand <michael.wiegand@intevation.de>

	Add support for new empty scan config template.

	* src/html/src/omp.xsl: Switch default to 'empty'.

	* src/gsad_omp.c (create_config_omp): Switch default to 'empty'.

2009-12-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/src/omp.xsl: Grey out Stop/Delete in case a Task is "Requested".

2009-11-27  Matthew Mundell <matthew.mundell@intevation.de>

	* src/gsad_omp.h, src/gsad_omp.c: New files.

	* src/CMakeLists.txt: Add static analysis rules.

2009-11-27  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl (html-config-nvt-table): Always show the
	preferences, as there is always the timeout preference.

2009-11-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* VERSION, CMakeLists.txt, src/html/src/about.htm4: Version set
	to 0.8.1.SVN.

2009-11-26  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/header.m4, src/html/footer.m4, src/html/template.m4: New.

	* src/html/make_html: New.

	* src/html/src/login/login.html,
	src/html/src/help/error_messages.htm4: New.

2009-11-26  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl: Match input widths to validator widths.
	(get_targets): Apply gsad_msg.

2009-11-26  Matthew Mundell <matthew.mundell@intevation.de>

	* src/html/src/omp.xsl: Convert tabs to spaces.

2009-11-24  Matthew Mundell <matthew.mundell@intevation.de>

	Add per-NVT timeout support.

	* src/html/src/omp.xsl (html-config-family-table): Add timeout column.